--- a/index.html
+++ b/index.html
@@ -5,36 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospital Login</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <div class="container d-flex justify-content-center align-items-center vh-100">
-        <div class="card shadow-lg p-4" style="max-width: 400px; width: 100%;">
-            <h3 class="text-center mb-4">Hospital Login</h3>
+    <div class="login-container">
+        <div class="login-box">
+            <h2>Hospital Login</h2>
             <form action="#" method="post">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" required placeholder="Enter your username">
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" required placeholder="Enter your password">
-                </div>
-                <div class="mb-3">
-                    <button type="submit" class="btn btn-primary w-100">Login</button>
-                </div>
-                <div class="text-center">
-                    <a href="#">Forgot password?</a>
-                </div>
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" placeholder="Enter username" required>
+
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Enter password" required>
+
+                <button type="submit">Login</button>
+
+                <a href="#" class="forgot-password">Forgot password?</a>
             </form>
         </div>
     </div>
-
-    <!-- Bootstrap JS (optional for functionality like tooltips, popovers) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
